gccida/g2/copy_addr_to_reg
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_addr_to_reg/src/explow.c:1155:28: error: use of undeclared identifier 'machine_mode'
return copy_to_mode_reg( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), x); 
                           ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/copy_addr_to_reg/src/obj/explow.o] Error 1
